Reworking LASFile object and error handling

--- a/src/lasfile/known_sections.json
+++ b/src/lasfile/known_sections.json
@@ -4,32 +4,38 @@
         "version":
         {
             "type": "header",
-            "titles": ["v", "V"]
+            "titles": ["v", "V"],
+            "required": true
         },
         "well":
         {
             "type": "header",
-            "titles": ["w", "W"]
+            "titles": ["w", "W"],
+            "required": true
         },
         "parameters":
         {
             "type": "header",
-            "titles": ["p", "P"]
+            "titles": ["p", "P"],
+            "required": false
         },
         "curves":
         {
             "type": "header",
-            "titles": ["c", "C"]
+            "titles": ["c", "C"],
+            "required": true
         },
         "data":
         {
             "type": "data",
-            "titles": ["a", "A"]
+            "titles": ["a", "A"],
+            "required": true
         },
         "other":
         {
             "type": "header",
-            "titles": ["o", "O"]
+            "titles": ["o", "O"],
+            "required": false
         }
     },
     "2.0":
@@ -37,32 +43,38 @@
         "version":
         {
             "type": "header",
-            "titles": ["v", "V"]
+            "titles": ["v", "V"],
+            "required": true
         },
         "well":
         {
             "type": "header",
-            "titles": ["w", "W"]
+            "titles": ["w", "W"],
+            "required": true
         },
         "parameters":
         {
             "type": "header",
-            "titles": ["p", "P"]
+            "titles": ["p", "P"],
+            "required": false
         },
         "curves":
         {
             "type": "header",
-            "titles": ["c", "C"]
+            "titles": ["c", "C"],
+            "required": true
         },
         "data":
         {
             "type": "data",
-            "titles": ["a", "A"]
+            "titles": ["a", "A"],
+            "required": true
         },
         "other":
         {
             "type": "header",
-            "titles": ["o", "O"]
+            "titles": ["o", "O"],
+            "required": false
         }
     },
     "3.0":
@@ -70,102 +82,122 @@
         "version":
         {
             "type": "header",
-            "titles": ["version"]
+            "titles": ["version"],
+            "required": true
         },
         "well":
         {
             "type": "header",
-            "titles": ["well"]
+            "titles": ["well"],
+            "required": true
         },
         "parameters":
         {
             "type": "header",
-            "titles": ["parameter", "log_parameter"]
+            "titles": ["parameter", "log_parameter"],
+            "required": false
         },
         "curves":
         {
             "type": "header",
-            "titles": ["curves", "curve", "curve_definition", "log_definition"]
+            "titles": ["curves", "curve", "curve_definition", "log_definition"],
+            "required": true
         },
         "data":
         {
             "type": "data",
-            "titles": ["log_data", "ascii", "data"]
+            "titles": ["log_data", "ascii", "data"],
+            "required": true
         },
         "core_parameters":
         {
             "type": "header",
-            "titles": ["core_parameters"]
+            "titles": ["core_parameters"],
+            "required": false
         },
         "core_definition":
         {
             "type": "header",
-            "titles": ["core_definition"]
+            "titles": ["core_definition"],
+            "required": false
         },
         "core_data":
         {
             "type": "data",
-            "titles": ["core_data"]
+            "titles": ["core_data"],
+            "required": false
         },
         "inclinometry_parameters":
         {
             "type": "header",
-            "titles": ["inclinometry_parameters"]
+            "titles": ["inclinometry_parameters"],
+            "required": false
         },
         "inclinometry_definition":
         {
             "type": "header",
-            "titles": ["inclinometry_definition"]
+            "titles": ["inclinometry_definition"],
+            "required": false
         },
         "inclinometry_data":
         {
             "type": "data",
-            "titles": ["inclinometry_data"]
+            "titles": ["inclinometry_data"],
+            "required": false
         },
         "drill_parameters":
         {
             "type": "header",
-            "titles": ["drill_parameters"]
+            "titles": ["drill_parameters"],
+            "required": false
         },
         "drill_definition":
         {
             "type": "header",
-            "titles": ["drill_definition"]
+            "titles": ["drill_definition"],
+            "required": false
         },
         "drill_data":
         {
             "type": "data",
-            "titles": ["drill_data"]
+            "titles": ["drill_data"],
+            "required": false
         },
         "tops_parameters":
         {
             "type": "header",
-            "titles": ["tops_parameters"]
+            "titles": ["tops_parameters"],
+            "required": false
         },
         "tops_definition":
         {
             "type": "header",
-            "titles": ["tops_definition"]
+            "titles": ["tops_definition"],
+            "required": false
         },
         "tops_data":
         {
             "type": "data",
-            "titles": ["tops_data"]
+            "titles": ["tops_data"],
+            "required": false
         },
         "test_parameters":
         {
             "type": "header",
-            "titles": ["test_parameters"]
+            "titles": ["test_parameters"],
+            "required": false
         },
         "test_definition":
         {
             "type": "header",
-            "titles": ["test_definition"]
+            "titles": ["test_definition"],
+            "required": false
         },
         "test_data":
         {
             "type": "data",
-            "titles": ["test_data"]
+            "titles": ["test_data"],
+            "required": false
         }
     }
 }
