--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,7 +29,13 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        if [[ "$OSTYPE" == "darwin"* ]]; then
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        elif [[ "$OSTYPE" == "linux-gnu" ]]; then
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        elif [[ "$OSTYPE" == "msys" ]]; then
+          if (Test-Path "requirements.txt") { pip install -r requirements.txt }
+        fi
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
