--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,12 +29,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest
-        if [[ "$OSTYPE" == "darwin"* ]]; then
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        elif [[ "$OSTYPE" == "linux-gnu" ]]; then
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        elif [[ "$OSTYPE" == "msys" ]]; then
+        if [ "${{ matrix.os }}" == "windows-latest" ]; then
           if (Test-Path "requirements.txt") { pip install -r requirements.txt }
+        elif [ "${{ matrix.os }}" == "ubuntu-latest" ] || [ "${{ matrix.os }}" == "macos-latest" ]; then
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         fi
     - name: Lint with flake8
       run: |
