--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,11 +29,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest
-        if [ "${{ matrix.os }}" == "windows-latest" ]; then
-          if (Test-Path "requirements.txt") { pip install -r requirements.txt }
-        elif [ "${{ matrix.os }}" == "ubuntu-latest" ] || [ "${{ matrix.os }}" == "macos-latest" ]; then
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        fi
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      shell: bash
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
