--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ readme = "README.md"
 keywords = ["las", "CWLS", "las logs", "petrophysical logs"]
 dependencies = [
     "numpy",
-    "pandas"
+    "pandas",
+    "apinum"
 ]
 requires-python = ">=3.7"
 
